Added weather predictors

--- a/example.html
+++ b/example.html
@@ -178,14 +178,79 @@ pre code {
 source(&quot;times.R&quot;)
 source(&quot;io.R&quot;)
 source(&quot;manipulate_data.R&quot;)</code></pre>
-<p><a href="https://s3.amazonaws.com/capitalbikeshare-data/202108-capitalbikeshare-tripdata.zip">Direct link to dataset</a></p>
+<p><a href="https://s3.amazonaws.com/capitalbikeshare-data/">Direct link to datasets</a></p>
 <pre class="r"><code>cbs_data &lt;- read_files(&#39;data/&#39;)
 data &lt;- sep_departures_from_arrivals(cbs_data)
-hour_data &lt;- get_station_hourly(data)
+filtered_data &lt;- filter_by_distance(data, from_station = &#39;lincoln_memorial&#39;, distance_m = 1600)
 
-# Stop here to work with current data. This is all you need! The below code sets up the data for time predictions
-# at a given station.</code></pre>
-<pre class="r"><code>ridership_data &lt;- setup_for_time_prediction(hour_data, station_name = &quot;lincoln_memorial&quot;)</code></pre>
+hour_data &lt;- get_station_hourly(filtered_data) %&gt;% 
+  get_historic_weather()
+
+# Stop here to work with current data. This is all you need! The below code sets up the data for time predictions at a given station and adds other predictors</code></pre>
+<pre class="r"><code># This lags all the data that is currently in hour_data, so weather is also 14 day
+# lagged
+ridership_data &lt;- setup_for_time_prediction(hour_data, station_name = &quot;lincoln_memorial&quot;)
+
+glimpse(ridership_data)</code></pre>
+<pre><code>## Rows: 5,031
+## Columns: 56
+## Groups: year, month, day, hour [2,673]
+## $ year                                                    &lt;dbl&gt; 2021, 2021, 20…
+## $ month                                                   &lt;ord&gt; Feb, Feb, Feb,…
+## $ day                                                     &lt;int&gt; 15, 15, 15, 15…
+## $ hour                                                    &lt;int&gt; 0, 1, 1, 3, 3,…
+## $ type                                                    &lt;chr&gt; &quot;arrivals&quot;, &quot;a…
+## $ `NA`                                                    &lt;dbl&gt; 1, 0, 0, 1, 1,…
+## $ `20th_&amp;_e_st_nw`                                        &lt;dbl&gt; 0, 1, 0, 0, 0,…
+## $ `new_hampshire_ave_&amp;_24th_st_nw`                        &lt;dbl&gt; 0, 0, 1, 0, 0,…
+## $ `21st_&amp;_i_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 1, 0,…
+## $ `19th_&amp;_g_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `22nd_&amp;_i_st_nw_/_foggy_bottom`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `henry_bacon_dr_&amp;_lincoln_memorial_circle_nw`           &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `18th_st_&amp;_pennsylvania_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `21st_st_&amp;_pennsylvania_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `23rd_&amp;_e_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `20th_st_&amp;_virginia_ave_nw`                             &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `22nd_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `us_dept_of_state_/_virginia_ave_&amp;_21st_st_nw`          &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `21st_st_&amp;_g_st_nw`                                     &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ kennedy_center                                          &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `19th_st_&amp;_pennsylvania_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `19th_&amp;_e_street_nw`                                    &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `22nd_&amp;_h_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `jefferson_dr_&amp;_14th_st_sw`                             &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ jefferson_memorial                                      &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ lincoln_memorial                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `17th_&amp;_g_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `ohio_dr_&amp;_west_basin_dr_sw_/_mlk_&amp;_fdr_memorials`      &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `18th_&amp;_c_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `virginia_ave_&amp;_25th_st_nw`                             &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `21st_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `15th_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `17th_st_&amp;_independence_ave_sw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `19th_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `19th_&amp;_k_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ roosevelt_island                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `n_lynn_st_&amp;_fairfax_dr`                                &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `smithsonian-national_mall_/_jefferson_dr_&amp;_12th_st_sw` &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `4th_st_&amp;_g_st_sw`                                      &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ `20th_&amp;_l_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
+## $ maximum_temperature                                     &lt;dbl&gt; 30.7, 30.7, 30…
+## $ minimum_temperature                                     &lt;dbl&gt; 30.7, 30.7, 30…
+## $ temperature                                             &lt;dbl&gt; 30.7, 30.7, 30…
+## $ wind_chill                                              &lt;dbl&gt; 19.7, 20.2, 20…
+## $ heat_index                                              &lt;dbl&gt; NA, NA, NA, NA…
+## $ precipitation                                           &lt;dbl&gt; 0.00, 0.00, 0.…
+## $ snow                                                    &lt;dbl&gt; 0.06, 0.06, 0.…
+## $ snow_depth                                              &lt;dbl&gt; 1.64, 1.70, 1.…
+## $ wind_speed                                              &lt;dbl&gt; 15.7, 14.3, 14…
+## $ wind_direction                                          &lt;dbl&gt; 20, 19, 19, 9,…
+## $ wind_gust                                               &lt;dbl&gt; NA, 17.2, 17.2…
+## $ visibility                                              &lt;dbl&gt; 4.0, 6.5, 6.5,…
+## $ cloud_cover                                             &lt;dbl&gt; 100.0, 100.0, …
+## $ relative_humidity                                       &lt;dbl&gt; 90.16, 89.99, …
+## $ conditions                                              &lt;chr&gt; &quot;Snow, Overcas…
+## $ ridership                                               &lt;dbl&gt; 0, NA, NA, 0, …</code></pre>
 <pre class="r"><code># Just testing one data point to make sure ridership is corret.
 #  Should test this is working as intended.
 # ridership_data&#39;s lincoln_memorial column should match the hour_data&#39;s 
@@ -194,30 +259,24 @@ hour_data &lt;- get_station_hourly(data)
 hour_data %&gt;% 
   select(lincoln_memorial, year, month, day, hour) %&gt;% 
   filter(year == 2021, month == &quot;Jul&quot;, day == 3, hour == 12)</code></pre>
-<pre><code>## # A tibble: 2 × 5
-## # Groups:   year, month, day, hour [1]
-##   lincoln_memorial  year month   day  hour
-##              &lt;dbl&gt; &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt;
-## 1               23  2021 Jul       3    12
-## 2               14  2021 Jul       3    12</code></pre>
+<pre><code>## # A tibble: 0 × 5
+## # Groups:   year, month, day, hour [0]
+## # … with 5 variables: lincoln_memorial &lt;dbl&gt;, year &lt;dbl&gt;, month &lt;ord&gt;,
+## #   day &lt;int&gt;, hour &lt;int&gt;</code></pre>
 <pre class="r"><code>hour_data %&gt;% 
   select(lincoln_memorial, year, month, day, hour, type) %&gt;% 
   filter(year == 2021, month == &quot;Jul&quot;, day == 17, hour == 12)</code></pre>
-<pre><code>## # A tibble: 2 × 6
-## # Groups:   year, month, day, hour [1]
-##   lincoln_memorial  year month   day  hour type      
-##              &lt;dbl&gt; &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;     
-## 1               26  2021 Jul      17    12 arrivals  
-## 2               15  2021 Jul      17    12 departures</code></pre>
+<pre><code>## # A tibble: 0 × 6
+## # Groups:   year, month, day, hour [0]
+## # … with 6 variables: lincoln_memorial &lt;dbl&gt;, year &lt;dbl&gt;, month &lt;ord&gt;,
+## #   day &lt;int&gt;, hour &lt;int&gt;, type &lt;chr&gt;</code></pre>
 <pre class="r"><code>ridership_data %&gt;% 
   select(ridership, lincoln_memorial, year, month, day, hour, type) %&gt;% 
   filter(year == 2021, month == &quot;Jul&quot;, day == 17, hour == 12)</code></pre>
-<pre><code>## # A tibble: 2 × 7
-## # Groups:   year, month, day, hour [1]
-##   ridership lincoln_memorial  year month   day  hour type      
-##       &lt;dbl&gt;            &lt;dbl&gt; &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt; &lt;chr&gt;     
-## 1        26               23  2021 Jul      17    12 arrivals  
-## 2        15               14  2021 Jul      17    12 departures</code></pre>
+<pre><code>## # A tibble: 0 × 7
+## # Groups:   year, month, day, hour [0]
+## # … with 7 variables: ridership &lt;dbl&gt;, lincoln_memorial &lt;dbl&gt;, year &lt;dbl&gt;,
+## #   month &lt;ord&gt;, day &lt;int&gt;, hour &lt;int&gt;, type &lt;chr&gt;</code></pre>
 </div>
 
 
