Removed April - No Wx for Apr 2020

--- a/example.html
+++ b/example.html
@@ -179,9 +179,16 @@ source(&quot;times.R&quot;)
 source(&quot;io.R&quot;)
 source(&quot;manipulate_data.R&quot;)</code></pre>
 <p><a href="https://s3.amazonaws.com/capitalbikeshare-data/">Direct link to datasets</a></p>
-<pre class="r"><code>cbs_data &lt;- read_files(&#39;data/&#39;)
-data &lt;- sep_departures_from_arrivals(cbs_data)
-filtered_data &lt;- filter_by_distance(data, from_station = &#39;lincoln_memorial&#39;, distance_m = 1600)
+<pre class="r"><code># Read all the data
+cbs_data &lt;- read_files(&#39;data/&#39;)
+
+# Read one month for testing
+# cbs_data &lt;- read_csv(&quot;data/202107-capitalbikeshare-tripdata.csv&quot;)
+
+data &lt;- sep_departures_from_arrivals(cbs_data) %&gt;% 
+  filter(!is.na(station)) # Remove electric bikes not going to / from a station
+
+filtered_data &lt;- filter_by_distance(data, from_station = &#39;lincoln_memorial&#39;, distance_m = 800)
 
 hour_data &lt;- get_station_hourly(filtered_data) %&gt;% 
   get_historic_weather()
@@ -189,94 +196,109 @@ hour_data &lt;- get_station_hourly(filtered_data) %&gt;%
 # Stop here to work with current data. This is all you need! The below code sets up the data for time predictions at a given station and adds other predictors</code></pre>
 <pre class="r"><code># This lags all the data that is currently in hour_data, so weather is also 14 day
 # lagged
-ridership_data &lt;- setup_for_time_prediction(hour_data, station_name = &quot;lincoln_memorial&quot;)
-
-glimpse(ridership_data)</code></pre>
-<pre><code>## Rows: 5,031
-## Columns: 56
-## Groups: year, month, day, hour [2,673]
-## $ year                                                    &lt;dbl&gt; 2021, 2021, 20…
-## $ month                                                   &lt;ord&gt; Feb, Feb, Feb,…
-## $ day                                                     &lt;int&gt; 15, 15, 15, 15…
-## $ hour                                                    &lt;int&gt; 0, 1, 1, 3, 3,…
-## $ type                                                    &lt;chr&gt; &quot;arrivals&quot;, &quot;a…
-## $ `NA`                                                    &lt;dbl&gt; 1, 0, 0, 1, 1,…
-## $ `20th_&amp;_e_st_nw`                                        &lt;dbl&gt; 0, 1, 0, 0, 0,…
-## $ `new_hampshire_ave_&amp;_24th_st_nw`                        &lt;dbl&gt; 0, 0, 1, 0, 0,…
-## $ `21st_&amp;_i_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 1, 0,…
-## $ `19th_&amp;_g_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `22nd_&amp;_i_st_nw_/_foggy_bottom`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `henry_bacon_dr_&amp;_lincoln_memorial_circle_nw`           &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `18th_st_&amp;_pennsylvania_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `21st_st_&amp;_pennsylvania_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `23rd_&amp;_e_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `20th_st_&amp;_virginia_ave_nw`                             &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `22nd_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `us_dept_of_state_/_virginia_ave_&amp;_21st_st_nw`          &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `21st_st_&amp;_g_st_nw`                                     &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ kennedy_center                                          &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `19th_st_&amp;_pennsylvania_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `19th_&amp;_e_street_nw`                                    &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `22nd_&amp;_h_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `jefferson_dr_&amp;_14th_st_sw`                             &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ jefferson_memorial                                      &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ lincoln_memorial                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `17th_&amp;_g_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `ohio_dr_&amp;_west_basin_dr_sw_/_mlk_&amp;_fdr_memorials`      &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `18th_&amp;_c_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `virginia_ave_&amp;_25th_st_nw`                             &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `21st_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `15th_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `17th_st_&amp;_independence_ave_sw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `19th_st_&amp;_constitution_ave_nw`                         &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `19th_&amp;_k_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ roosevelt_island                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `n_lynn_st_&amp;_fairfax_dr`                                &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `smithsonian-national_mall_/_jefferson_dr_&amp;_12th_st_sw` &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `4th_st_&amp;_g_st_sw`                                      &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ `20th_&amp;_l_st_nw`                                        &lt;dbl&gt; 0, 0, 0, 0, 0,…
-## $ maximum_temperature                                     &lt;dbl&gt; 30.7, 30.7, 30…
-## $ minimum_temperature                                     &lt;dbl&gt; 30.7, 30.7, 30…
-## $ temperature                                             &lt;dbl&gt; 30.7, 30.7, 30…
-## $ wind_chill                                              &lt;dbl&gt; 19.7, 20.2, 20…
-## $ heat_index                                              &lt;dbl&gt; NA, NA, NA, NA…
-## $ precipitation                                           &lt;dbl&gt; 0.00, 0.00, 0.…
-## $ snow                                                    &lt;dbl&gt; 0.06, 0.06, 0.…
-## $ snow_depth                                              &lt;dbl&gt; 1.64, 1.70, 1.…
-## $ wind_speed                                              &lt;dbl&gt; 15.7, 14.3, 14…
-## $ wind_direction                                          &lt;dbl&gt; 20, 19, 19, 9,…
-## $ wind_gust                                               &lt;dbl&gt; NA, 17.2, 17.2…
-## $ visibility                                              &lt;dbl&gt; 4.0, 6.5, 6.5,…
-## $ cloud_cover                                             &lt;dbl&gt; 100.0, 100.0, …
-## $ relative_humidity                                       &lt;dbl&gt; 90.16, 89.99, …
-## $ conditions                                              &lt;chr&gt; &quot;Snow, Overcas…
-## $ ridership                                               &lt;dbl&gt; 0, NA, NA, 0, …</code></pre>
+lagged_data &lt;- setup_for_time_prediction(hour_data, station_name = &quot;lincoln_memorial&quot;)
+glimpse(lagged_data)</code></pre>
+<pre><code>## Rows: 10,235
+## Columns: 45
+## Groups: year, month, day, hour [10,234]
+## $ year                                                             &lt;dbl&gt; 2020,…
+## $ month                                                            &lt;ord&gt; Apr, …
+## $ day                                                              &lt;int&gt; 15, 1…
+## $ hour                                                             &lt;int&gt; 5, 7,…
+## $ `22nd_st_&amp;_constitution_ave_nw_arrivals`                         &lt;dbl&gt; 1, 1,…
+## $ `19th_st_&amp;_constitution_ave_nw_arrivals`                         &lt;dbl&gt; 0, 1,…
+## $ `19th_st_&amp;_constitution_ave_nw_departures`                       &lt;dbl&gt; 0, 1,…
+## $ `henry_bacon_dr_&amp;_lincoln_memorial_circle_nw_departures`         &lt;dbl&gt; 0, 1,…
+## $ `us_dept_of_state_/_virginia_ave_&amp;_21st_st_nw_arrivals`          &lt;dbl&gt; 0, 2,…
+## $ `21st_st_&amp;_constitution_ave_nw_arrivals`                         &lt;dbl&gt; 0, 0,…
+## $ `22nd_st_&amp;_constitution_ave_nw_departures`                       &lt;dbl&gt; 0, 0,…
+## $ `21st_st_&amp;_constitution_ave_nw_departures`                       &lt;dbl&gt; 0, 0,…
+## $ `henry_bacon_dr_&amp;_lincoln_memorial_circle_nw_arrivals`           &lt;dbl&gt; 0, 0,…
+## $ lincoln_memorial_arrivals                                        &lt;dbl&gt; 0, 0,…
+## $ `us_dept_of_state_/_virginia_ave_&amp;_21st_st_nw_departures`        &lt;dbl&gt; 0, 0,…
+## $ lincoln_memorial_departures                                      &lt;dbl&gt; 0, 0,…
+## $ `ohio_dr_&amp;_west_basin_dr_sw_/_mlk_&amp;_fdr_memorials_arrivals`      &lt;dbl&gt; 0, 0,…
+## $ `ohio_dr_&amp;_west_basin_dr_sw_/_mlk_&amp;_fdr_memorials_departures`    &lt;dbl&gt; 0, 0,…
+## $ `new_hampshire_ave_&amp;_24th_st_nw_arrivals`                        &lt;dbl&gt; 0, 0,…
+## $ `smithsonian-national_mall_/_jefferson_dr_&amp;_12th_st_sw_arrivals` &lt;dbl&gt; 0, 0,…
+## $ `7th_&amp;_t_st_nw_arrivals`                                         &lt;dbl&gt; 0, 0,…
+## $ `20th_st_&amp;_virginia_ave_nw_departures`                           &lt;dbl&gt; 0, 0,…
+## $ `20th_st_&amp;_virginia_ave_nw_arrivals`                             &lt;dbl&gt; 0, 0,…
+## $ `n_lynn_st_&amp;_fairfax_dr_arrivals`                                &lt;dbl&gt; 0, 0,…
+## $ `15th_st_&amp;_pennsylvania_ave_nw_arrivals`                         &lt;dbl&gt; 0, 0,…
+## $ `woodley_park_metro_/_calvert_st_&amp;_connecticut_ave_nw_arrivals`  &lt;dbl&gt; 0, 0,…
+## $ `3000_connecticut_ave_nw_/_national_zoo_arrivals`                &lt;dbl&gt; 0, 0,…
+## $ `potomac_&amp;_m_st_nw_arrivals`                                     &lt;dbl&gt; 0, 0,…
+## $ maximum_temperature                                              &lt;dbl&gt; NA, N…
+## $ minimum_temperature                                              &lt;dbl&gt; NA, N…
+## $ temperature                                                      &lt;dbl&gt; NA, N…
+## $ wind_chill                                                       &lt;dbl&gt; NA, N…
+## $ heat_index                                                       &lt;dbl&gt; NA, N…
+## $ precipitation                                                    &lt;dbl&gt; NA, N…
+## $ snow                                                             &lt;dbl&gt; NA, N…
+## $ snow_depth                                                       &lt;dbl&gt; NA, N…
+## $ wind_speed                                                       &lt;dbl&gt; NA, N…
+## $ wind_direction                                                   &lt;dbl&gt; NA, N…
+## $ wind_gust                                                        &lt;dbl&gt; NA, N…
+## $ visibility                                                       &lt;dbl&gt; NA, N…
+## $ cloud_cover                                                      &lt;dbl&gt; NA, N…
+## $ relative_humidity                                                &lt;dbl&gt; NA, N…
+## $ conditions                                                       &lt;chr&gt; NA, N…
+## $ departures                                                       &lt;dbl&gt; NA, N…
+## $ arrivals                                                         &lt;dbl&gt; NA, N…</code></pre>
+<pre class="r"><code># Recommended next steps before modeling
+lagged_data %&gt;% 
+  filter(!is.na(departures) &amp; !is.na(arrivals))</code></pre>
+<pre><code>## # A tibble: 8,957 × 45
+## # Groups:   year, month, day, hour [8,957]
+##     year month   day  hour `22nd_st_&amp;_const… `19th_st_&amp;_const… `19th_st_&amp;_const…
+##    &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt;             &lt;dbl&gt;             &lt;dbl&gt;             &lt;dbl&gt;
+##  1  2020 Apr      15     8                 0                 0                 0
+##  2  2020 Apr      15     9                 0                 0                 0
+##  3  2020 Apr      15    13                 0                 0                 0
+##  4  2020 Apr      15    14                 0                 0                 0
+##  5  2020 Apr      15    15                 0                 1                 1
+##  6  2020 Apr      15    16                 0                 0                 0
+##  7  2020 Apr      15    17                 2                 0                 0
+##  8  2020 Apr      15    18                 0                 0                 0
+##  9  2020 Apr      15    19                 0                 0                 0
+## 10  2020 Apr      16     7                 2                 0                 0
+## # … with 8,947 more rows, and 38 more variables:
+## #   henry_bacon_dr_&amp;_lincoln_memorial_circle_nw_departures &lt;dbl&gt;,
+## #   us_dept_of_state_/_virginia_ave_&amp;_21st_st_nw_arrivals &lt;dbl&gt;,
+## #   21st_st_&amp;_constitution_ave_nw_arrivals &lt;dbl&gt;,
+## #   22nd_st_&amp;_constitution_ave_nw_departures &lt;dbl&gt;,
+## #   21st_st_&amp;_constitution_ave_nw_departures &lt;dbl&gt;,
+## #   henry_bacon_dr_&amp;_lincoln_memorial_circle_nw_arrivals &lt;dbl&gt;, …</code></pre>
 <pre class="r"><code># Just testing one data point to make sure ridership is corret.
 #  Should test this is working as intended.
 # ridership_data&#39;s lincoln_memorial column should match the hour_data&#39;s 
 #  lincoln memorial from 14 days prior.
 # Ridership_data&#39;s ridership should match hour_data&#39;s lincoln memorial from the same date.
 hour_data %&gt;% 
-  select(lincoln_memorial, year, month, day, hour) %&gt;% 
+  select(lincoln_memorial_departures, year, month, day, hour) %&gt;% 
   filter(year == 2021, month == &quot;Jul&quot;, day == 3, hour == 12)</code></pre>
-<pre><code>## # A tibble: 0 × 5
-## # Groups:   year, month, day, hour [0]
-## # … with 5 variables: lincoln_memorial &lt;dbl&gt;, year &lt;dbl&gt;, month &lt;ord&gt;,
-## #   day &lt;int&gt;, hour &lt;int&gt;</code></pre>
+<pre><code>## # A tibble: 1 × 5
+## # Groups:   year, month, day, hour [1]
+##   lincoln_memorial_departures  year month   day  hour
+##                         &lt;dbl&gt; &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt;
+## 1                          14  2021 Jul       3    12</code></pre>
 <pre class="r"><code>hour_data %&gt;% 
-  select(lincoln_memorial, year, month, day, hour, type) %&gt;% 
+  select(lincoln_memorial_departures, year, month, day, hour) %&gt;% 
   filter(year == 2021, month == &quot;Jul&quot;, day == 17, hour == 12)</code></pre>
-<pre><code>## # A tibble: 0 × 6
-## # Groups:   year, month, day, hour [0]
-## # … with 6 variables: lincoln_memorial &lt;dbl&gt;, year &lt;dbl&gt;, month &lt;ord&gt;,
-## #   day &lt;int&gt;, hour &lt;int&gt;, type &lt;chr&gt;</code></pre>
-<pre class="r"><code>ridership_data %&gt;% 
-  select(ridership, lincoln_memorial, year, month, day, hour, type) %&gt;% 
+<pre><code>## # A tibble: 1 × 5
+## # Groups:   year, month, day, hour [1]
+##   lincoln_memorial_departures  year month   day  hour
+##                         &lt;dbl&gt; &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt;
+## 1                          15  2021 Jul      17    12</code></pre>
+<pre class="r"><code>lagged_data %&gt;% 
+  select(departures, lincoln_memorial_departures, year, month, day, hour) %&gt;% 
   filter(year == 2021, month == &quot;Jul&quot;, day == 17, hour == 12)</code></pre>
-<pre><code>## # A tibble: 0 × 7
-## # Groups:   year, month, day, hour [0]
-## # … with 7 variables: ridership &lt;dbl&gt;, lincoln_memorial &lt;dbl&gt;, year &lt;dbl&gt;,
-## #   month &lt;ord&gt;, day &lt;int&gt;, hour &lt;int&gt;, type &lt;chr&gt;</code></pre>
+<pre><code>## # A tibble: 1 × 6
+## # Groups:   year, month, day, hour [1]
+##   departures lincoln_memorial_departures  year month   day  hour
+##        &lt;dbl&gt;                       &lt;dbl&gt; &lt;dbl&gt; &lt;ord&gt; &lt;int&gt; &lt;int&gt;
+## 1         15                          14  2021 Jul      17    12</code></pre>
 </div>
 
 
