--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
 <h1>Index</h1>
-<a href="https://elenabagnera.github.io/CapitalBikesProject/example">Page 1</a>" >
+<a href="https://elenabagnera.github.io/CapitalBikesProject">Page 1</a>" >
 
 
