editing index file

--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
 <h1>Index</h1>
-<a href="https://elenabagnera.github.io/CapitalBikesProject">Page 1</a>" > Index.html
+<a href="https://elenabagnera.github.io/CapitalBikesProject">Page 1</a>" > index.html
 
 
