adding bullet points

--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <h1>Index<\h1>
 
 <a href=https://elenabagnera.github.io/CapitalBikesProject/example
+
+
+<p>Paragraph example.</p> 
+
+<ol>
+<li>Motivation & Goals 1</li>
+<li>Exploratory data Anlysis 2</li>
+<li>Feature Engeneering 3</li>
+<li>Model selection 4</li>
+<li>Discussion 5</li>
+</ol>
+
+
 >Page 1</a> 
