--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<h1>Index<\h1>
+<h1>Index
 
-<a href=https://elenabagnera.github.io/CapitalBikesProject/example
-
-
-<p>Paragraph example.</p> 
+<p>Here are our sections.</p> 
 
 <ol>
 <li>Motivation & Goals 1</li>
@@ -13,5 +10,8 @@
 <li>Discussion 5</li>
 </ol>
 
-
+We will can add html documents as separate links in the following way or just use this index as the only html file:
+<a href=https://elenabagnera.github.io/CapitalBikesProject/example
 >Page 1</a> 
+
+
