--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<h1>Index
+<b>Index<b>
 
 <p>Here are our sections.</p> 
 
 <ol>
-<li>Motivation & Goals 1</li>
-<li>Exploratory data Anlysis 2</li>
-<li>Feature Engeneering 3</li>
-<li>Model selection 4</li>
-<li>Discussion 5</li>
+<li>Motivation & Goals </li>
+<li>Exploratory data Anlysis </li>
+<li>Feature Engeneering </li>
+<li>Model selection </li>
+<li>Discussion </li>
 </ol>
 
 We will can add html documents as separate links in the following way or just use this index as the only html file:
