--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <li>Discussion </li>
 </ol>
 
-We will can add html documents as separate links in the following way or just use this index as the only html file:
+We can add html documents as separate links in the following way or just use this index as the only html file:
 <a href=https://elenabagnera.github.io/CapitalBikesProject/example
 >Page 1</a> 
 
