changes to index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <b>Index</b>
 
-<p>Here are our sections.</p> 
+<p>Here are our sections:</p> 
 
 <ol>
 <li>Motivation & Goals </li>
@@ -12,6 +12,6 @@
 
 We can add html documents as separate links in the following way or just use this index as the only html file:
 <a href=https://elenabagnera.github.io/CapitalBikesProject/example
->Page 1</a> 
+>Example 1</a> 
 
 
