adding cleaning to index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: cayman
 
 <ol>
 <li>Motivation & Goals </li>
+<li>Data Cleaning </li>
 <li>Exploratory data Anlysis </li>
 <li>Feature Engeneering </li>
 <li>Model selection </li>
