--- a/site-decision_tree.html
+++ b/site-decision_tree.html
@@ -198,7 +198,7 @@ folds &lt;- vfold_cv(data = train, v = 10)</code></pre>
 <div id="justification-for-engineering-based-on-data-exploration" class="section level2">
 <h2>Justification for Engineering based on data exploration</h2>
 <p>From the exploratory data analysis phase, holidays clearly affected departures. To help improve our predictions, we add step_holiday to our recipe to control for outlier trends during holidays. Additionally, as shown in the exploratory phase, the distribution of our outcome variable, <code>Lincoln Memorial Departures</code> is skewed. To avoid this imbalance affecting our predictions, step_BoxCox works since departures is a strictly positive variable but it does have 0s (hence we cannot use logs). We use it to transform the outcome variable so that it would be more like a normal distribution.</p>
-<p>step_other further improves our prediction as it removes any infrequently reoccurring observations in both our predictors and outcome variable. Finally, we used the near zero variance filter: step_nzv, to account for any predictors in our models that don’t have variance (one or very few unique values) and where these few unique values are far away from each other.</p>
+<p>Finally, we used the near zero variance filter: step_nzv, to account for any predictors in our models that don’t have variance (one or very few unique values) and where these few unique values are far away from each other.</p>
 </div>
 <div id="model-implementation" class="section level2">
 <h2>Model Implementation</h2>
